--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2024"
 
 [dependencies]
 directories = "6.0.0"
+serde = "1.0.219"
+serde_derive = "1.0.219"
+serde_yaml = "0.9.34"
 tiny_http = "0.12.0"
 webbrowser = "1.0.3"
 
