Added custom port

--- a/config.yaml
+++ b/config.yaml
@@ -4,5 +4,5 @@ main: ""
 # If you want custom error 404 page put a 404.html file in the same directory as the other html file
 # Path where the html can be found (defaults to the same directory where the launcher is found)
 path: ""
-# Custom port, below 1023 you need to run the app with SuperUser privilages
+# Port number is needed, there is no default yet. Might support it later.
 port: 7878
