--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 directories = "6.0.0"
+once_cell = "1.21.0"
 serde = "1.0.219"
 serde_derive = "1.0.219"
 serde_yaml = "0.9.34"
