--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+chrono = "0.4.40"
 directories = "6.0.0"
 once_cell = "1.21.0"
 serde = "1.0.219"
