Config file updated

--- a/config.yaml
+++ b/config.yaml
@@ -7,5 +7,4 @@ path: ""
 # Port number is needed, there is no default yet. Might support it later.
 port: 7878
 # Log will be putted into jinx.log (if false, log is going to be on terminal)
-# Log is going to be putted next to config.yaml
-log: true
+log: false
