--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rust_web"
+name = "Jinx"
 version = "0.1.0"
 edition = "2024"
 
@@ -11,5 +11,5 @@ serde = "1.0.219"
 serde_derive = "1.0.219"
 serde_yaml = "0.9.34"
 tiny_http = "0.12.0"
-webbrowser = "1.0.3"
+webbrowser = "1.0.4"
 
