--- a/config.yaml
+++ b/config.yaml
@@ -1,10 +1,20 @@
-# If path or main is empty ("") default is going to be used
-# File's name that needs to be served (defaults to index.html)
-main: ""
-# If you want custom error 404 page put a 404.html file in the same directory as the other html file
-# Path where the html can be found (defaults to the same directory where the launcher is found)
+# There is a default will be used unless specifically askd for
+
+# Path where the files can be found (defaults to current directory if the string is empty)
 path: ""
-# Port number is needed, there is no default yet. Might support it later.
+
+# The name of the file that will be served (defaults to index.html if the string is empty)
+# If you want a custom 404 page put a file named '404.html' in the same directory
+main: ""
+# .html supported, .php is not yet tested
+
+# Port number:
 port: 7878
-# Log will be putted into jinx.log (if false, log is going to be on terminal)
+# Unsigned intager (u32), needed!
+# This is where you can find your website
+
+# Logging in to file:
 log: false
+# Boolean, needed!
+# If set true: will create a file named 'jinx.log'
+# If yet false: everything goes to the terminal
