--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,9 @@ edition = "2024"
 
 [dependencies]
 chrono = "0.4.40"
-directories = "6.0.0"
-serde = "1.0.219"
-serde_derive = "1.0.219"
+clap = "4.5.34"
+dirs = "6.0.0"
+serde = { version = "1.0.219", features = ["derive"] }
 serde_yaml = "0.9.34"
 tiny_http = "0.12.0"
 webbrowser = "1.0.4"
